--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -50,7 +50,7 @@
                         <a class="nav-link" href="{% url 'ubicacion' %}">UBICACION</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="repuestos.html">REPUESTOS DE INSTRUMENTOS</a>
+                        <a class="nav-link" href="{% url 'repuestos.html' %}">REPUESTOS DE INSTRUMENTOS</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
